--- a/Debug/makefile
+++ b/Debug/makefile
@@ -64,8 +64,8 @@ all: main-build
 main-build: H750_Signalanalyzer.elf secondary-outputs
 
 # Tool invocations
-H750_Signalanalyzer.elf H750_Signalanalyzer.map: $(OBJS) $(USER_OBJS) C:\STM32\H750_Signalanalyzer\STM32H750VBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "H750_Signalanalyzer.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\STM32\H750_Signalanalyzer\STM32H750VBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="H750_Signalanalyzer.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+H750_Signalanalyzer.elf H750_Signalanalyzer.map: $(OBJS) $(USER_OBJS) C:\STM32\STM32_H750_Signalanalyzer\STM32H750VBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "H750_Signalanalyzer.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\STM32\STM32_H750_Signalanalyzer\STM32H750VBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="H750_Signalanalyzer.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
